[package]
name = "consume-button-templates"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
deadpool-postgres = "0.14.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
lapin = "3.0.0"
log = "0.4.27"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-postgres = "0.7.13"
