[package]
name = "consume-button-templates"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
chrono = "0.4.41"
deadpool-postgres = "0.14.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
flate2 = "1.1.2"
futures = "0.3.31"
lapin = "3.0.0"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["gzip"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-postgres = "0.7.13"
